--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
       "db": {
         "kind": "hana"
       }
+    },
+    "[development]": {
+      "requires": {
+        "db": {
+          "kind": "sql"
+        }
+      }
     }
   }
 }
